package org.xiaoxiancai.imhere.server.business.protos;

option java_package = "org.xiaoxiancai.imhere.common.protos.business";
option java_outer_classname = "AddFriendRequestProtos";

message AddFriendRequest {
  
	required int32 fromUserId = 1; // 发起用户id
	
	required string fromUserNickname = 2; // 发起用户昵称
	
	required string toUserMobile = 3; // 被发起用户电话
}
