package org.xiaoxiancai.imhere.server.business.protos;

option java_package = "org.xiaoxiancai.imhere.common.protos.business";
option java_outer_classname = "AddFriendResponseProtos";

message AddFriendResponse {
  
	required bool isSuccess = 1; // 定位成功否

	required int32 status = 2; // 状态码

	optional string message = 3; // 附加信息

}
