package org.xiaoxiancai.imhere.server.business.protos;

import "LocationProtos.proto";

option java_package = "org.xiaoxiancai.imhere.common.protos.business";
option java_outer_classname = "LocateRequestProtos";

message LocateRequest {
  
	required Location currentLocation = 1; // 当前位置

}
